# libmei

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  FindGoogleTest.cmake  LICENSE  README  README.md  libmeiTarget.xcconfig  mei-Info.plist  meiattribute.cpp  meiattribute.h  test_xmloutput.cpp  types.cpp  types.h
doc/: README.html  libmei.doxygen
emscripten/: README.md  bach.mei  beethoven.mei  build.sh  emscripten.cpp  karma.conf.js  package.json  test.html  test_xmlinput.cpp
emscripten/test/: meiattribute.spec.js  meidocument.spec.js  meielement.spec.js  xmlexport.spec.js  xmlimport.spec.js
libmei.xcodeproj/: project.pbxproj
mei/2013-11-05/: mei-compiled.xml  mei-page-based.rng  mei-page-based.xml  mei-page-based.xml.odd
python/: CMakeLists.txt  MeiNamespace.cpp  _pymei.cpp  pymei.cpp  pymei_testsuite.py  setup.py
python/devel/: CMakeLists.txt
python/pymei/: __init__.py  exceptions.py
python/pymei/Helpers/: __init__.py  attribute_to_element.py  time.py
python/pymei/Modules/: __init__.py  cmn.py  cmnornaments.py  corpus.py  critapp.py  edittrans.py  facsimile.py  figtable.py  fingering.py  frbr.py  harmony.py  header.py  linkalign.py  lyrics.py  mensural.py  midi.py  namesdates.py  neumes.py  performance.py  ptrref.py  shared.py  text.py  usersymbols.py
python/src/: _libmei.cpp  _libmei_exceptions.cpp  _pymei.cpp
python/test/: meiattribute_test.py  meidocument_test.py  meielement_test.py  test_segfault.py  tests.py  xmlexport_test.py  xmlimport_test.py
python/test/testdocs/: badversion.mei  beethoven_no5.mei  campion.mei  noversion.mei  test-itemlist.mei
src/: MeiNamespace.cpp  MeiNamespace.h  analysismixins.cpp  analysismixins.h  cmn.cpp  cmn.h  cmnOrnaments.cpp  cmnOrnaments.h  cmnOrnamentsmixins.cpp  cmnOrnamentsmixins.h  cmnmixins.cpp  cmnmixins.h  cmnornaments.cpp  cmnornaments.h  cmnornamentsmixins.cpp  cmnornamentsmixins.h  corpus.cpp  corpus.h  critapp.cpp  critapp.h  critappmixins.cpp  critappmixins.h  edittrans.cpp  edittrans.h  edittransmixins.cpp  edittransmixins.h  exceptions.h  facsimile.cpp  facsimile.h  facsimilemixins.cpp  facsimilemixins.h  figtable.cpp  figtable.h  figtablemixins.cpp  figtablemixins.h  harmony.cpp  harmony.h  harmonymixins.cpp  harmonymixins.h  header.cpp  (+61 more)
src/Modules/: ax_layout.cpp  ax_layout.h  cmn.cpp  cmn.h  cmnornaments.cpp  cmnornaments.h  corpus.cpp  corpus.h  critapp.cpp  critapp.h  edittrans.cpp  edittrans.h  facsimile.cpp  facsimile.h  figtable.cpp  figtable.h  harmony.cpp  harmony.h  header.cpp  header.h  layout.cpp  linkalign.cpp  linkalign.h  lyrics.cpp  lyrics.h  mensural.cpp  mensural.h  midi.cpp  midi.h  namesdates.cpp  namesdates.h  neume.cpp  neume.h  performance.cpp  performance.h  ptrref.cpp  ptrref.h  shared.cpp  shared.h  solesmes.cpp  (+5 more)
src/export/: xmlexport.cpp  xmlexport.h  xmlexport_impl.cpp  xmlexport_impl.h
src/import/: xmlimport.cpp  xmlimport.h  xmlimport_impl.h
src/modules/: analysismixins.cpp  analysismixins.h  cmn.cpp  cmn.h  cmnmixins.cpp  cmnmixins.h  cmnornaments.cpp  cmnornaments.h  cmnornamentsmixins.cpp  cmnornamentsmixins.h  corpus.cpp  corpus.h  critapp.cpp  critapp.h  critappmixins.cpp  critappmixins.h  derived-module-meimixins.cpp  derived-module-meimixins.h  edittrans.cpp  edittrans.h  edittransmixins.cpp  edittransmixins.h  externalsymbolsmixins.cpp  externalsymbolsmixins.h  facsimile.cpp  facsimile.h  facsimilemixins.cpp  facsimilemixins.h  figtable.cpp  figtable.h  figtablemixins.cpp  figtablemixins.h  fingering.cpp  fingering.h  fingeringmixins.cpp  fingeringmixins.h  frbr.cpp  frbr.h  frbrmixins.cpp  frbrmixins.h  (+54 more)
test/: DC1317E.mei  bach.mei  beethoven.mei  campion.mei  gtest_main.cc  malformed.mei  mei_test.cpp  meiattribute_test.cpp  meidocument_test.cpp  meielement_test.cpp  module_layout_test.cpp  module_shared_test.cpp  module_solesmes_test.cpp  sample.xml  sibmei.mei  test-procinst.mei  test_cmn.cpp  test_meiattribute.cpp  test_meidocument.cpp  test_meielement.cpp  test_meifactory.cpp  test_shared.cpp  test_xmlinput.cpp  test_xmloutput.cpp  types_test.cpp
tools/: parseschema.py  parseschema2.py
tools/includes/: cmn.cpp.inc  cmn.h.inc  shared.cpp.inc  shared.h.inc
tools/includes/cpp/: cmn.cpp.inc  cmn.h.inc  facsimilemixins.cpp.inc  facsimilemixins.h.inc  shared.cpp.inc  shared.h.inc
tools/includes/python/: shared.py.inc
tools/includes/vrv/: atts_facsimile.cpp.inc  atts_facsimile.h.inc  attsfacsimile.h.inc  config.yml  facsimilemixins.h.inc
tools/langs/: __init__.py  cplusplus.py  cplusplus_vrv.py  java.py  manuscript.py  python.py
tools/output/cpp/: analysis.cpp  analysis.h  analysismixins.cpp  analysismixins.h  certainty.cpp  certainty.h  cmn.cpp  cmn.h  cmnmixins.cpp  cmnmixins.h  cmnornaments.cpp  cmnornaments.h  cmnornamentsmixins.cpp  cmnornamentsmixins.h  core.cpp  core.h  coremixins.cpp  coremixins.h  corpus.cpp  corpus.h  critapp.cpp  critapp.h  critappmixins.cpp  critappmixins.h  dictionaries.cpp  dictionaries.h  dictionariesmixins.cpp  dictionariesmixins.h  drama.cpp  drama.h  edittrans.cpp  edittrans.h  edittransmixins.cpp  edittransmixins.h  facsimile.cpp  facsimile.h  facsimilemixins.cpp  facsimilemixins.h  figtable.cpp  figtable.h  (+86 more)
util/: readmei.cpp  runmei.cpp  testcast.cpp
util/meiconverter/: Makefile  mei-update.cpp  readme.md
util/mxmltomei/: mxmlparser.cpp  mxmlparser.h  mxmltomei.cpp
